--- a/parkup1/app/src/main/res/layout/display.xml
+++ b/parkup1/app/src/main/res/layout/display.xml
@@ -42,6 +42,15 @@
 
     <!-- <include layout="@layout/content_main" /> -->
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclermain"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/appBarLayout"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"/>
+
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab"
         android:layout_width="wrap_content"
@@ -57,7 +66,7 @@
     app:layout_constraintTop_toTopOf="@+id/appBarLayout" -->
        <!-- app:srcCompat="@drawable/ic_shopping_cart" /> -->
 
-    <ScrollView
+    <!--<ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@+id/appBarLayout">
@@ -83,6 +92,6 @@
                 android:textSize="24sp"
                 tools:ignore="Suspicious0dp" />
         </LinearLayout>
-    </ScrollView>
+    </ScrollView>-->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
